--- a/doc/bib/biblio.bib
+++ b/doc/bib/biblio.bib
@@ -86,7 +86,7 @@ author = {Jesse Hughes and Bart Jacobs},
 }
 
 @inproceedings{katsumata:2013,
-	author = {Shin-ya Katsumata and Tetsuya Sato},
+	author = {Shin{-}ya Katsumata and Tetsuya Sato},
 	title = {Preorders on Monads and Coalgebraic Simulations},
 	year = {2013},
 	isbn = {9783642370748},
@@ -96,4 +96,15 @@ author = {Jesse Hughes and Bart Jacobs},
 	pages = {145–160},
 	location = {Rome, Italy},
 	series = {FOSSACS'13}
+}
+
+@article{eilenberg:1945,
+ author = {Samuel Eilenberg and Saunders MacLane},
+ journal = {Transactions of the American Mathematical Society},
+ number = {2},
+ pages = {231--294},
+ publisher = {American Mathematical Society},
+ title = {General Theory of Natural Equivalences},
+ volume = {58},
+ year = {1945}
 }
