--- a/doc/sty/unicode.sty
+++ b/doc/sty/unicode.sty
@@ -26,4 +26,5 @@
 \newcommand{\textalpha}{\ensuremath{\alpha}}
 \renewcommand{\textbeta}{\ensuremath{\beta}}
 \newcommand{\textlambda}{\ensuremath{\lambda}}
+\newcommand{\textomicron}{o}
 
