--- a/doc/bib/biblio.bib
+++ b/doc/bib/biblio.bib
@@ -108,3 +108,26 @@ author = {Jesse Hughes and Bart Jacobs},
  volume = {58},
  year = {1945}
 }
+
+@article{capretta:2005,
+  TITLE = {{General Recursion via Coinductive Types}},
+  AUTHOR = {Venanzio Capretta},
+  DOI = {10.2168/LMCS-1(2:1)2005},
+  JOURNAL = {{Logical Methods in Computer Science}},
+  VOLUME = {{Volume 1, Issue 2}},
+  YEAR = {2005},
+  MONTH = Jul,
+  KEYWORDS = {Computer Science - Logic in Computer Science ; F.3.1},
+}
+
+@article{kozen:2017, 
+	title={Practical coinduction}, 
+	volume={27}, 
+	DOI={10.1017/S0960129515000493}, 
+	number={7}, 
+	journal={Mathematical Structures in Computer Science},
+	publisher={Cambridge University Press}, 
+	author={DEXTER KOZEN and ALEXANDRA SILVA}, 
+	year={2017}, 
+	pages={1132–1152}
+}
