--- a/doc/tex/agda.tex
+++ b/doc/tex/agda.tex
@@ -279,4 +279,4 @@ Como se ve en el ejemplo, la manera de hacer una declaración inductiva-recursiv
 
 \subsection{Coinducción}\label{agda:coinduction}
 
-Agda tiene varios soportes diferentes para coinducción. Se describirán algunos de ellos más adelante en la sección \ref{}, junto con sus características principales y su utilidad.
+Agda tiene varios soportes diferentes para coinducción. Se describirán algunos de ellos más adelante en la sección \ref{coind:agda}, junto con sus características principales y su utilidad.
