--- a/doc/tex/monconc.tex
+++ b/doc/tex/monconc.tex
@@ -118,6 +118,8 @@ Sean $\mathscr{C}$ y $\mathscr{D}$ dos categorías. Un \textbf{funtor} $\mathit{
 \end{itemize}
 \end{definition}
 
+Se dice que un funtor es un \textbf{endofuntor} si la categoría de salida y la de llegada son la misma, es decir, $\mathit{F} : \mathscr{C} \rightarrow \mathscr{C}$.
+
 Siguiendo con la misma lógica, uno podría construir morfismos entre funtores. Es decir, algún tipo de construcción matemática que lleve de un funtor dado a otro. Este concepto se denomina transformación natural y se define como sigue:
 
 \begin{definition}[Transformaci\'on Natural]
