notacion musical en agda

--- a/doc/bib/biblio.bib
+++ b/doc/bib/biblio.bib
@@ -127,7 +127,7 @@ author = {Jesse Hughes and Bart Jacobs},
 	number={7}, 
 	journal={Mathematical Structures in Computer Science},
 	publisher={Cambridge University Press}, 
-	author={DEXTER KOZEN and ALEXANDRA SILVA}, 
+	author={Dexter Kozen and Alexandra Silva}, 
 	year={2017}, 
 	pages={1132–1152}
 }
